--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <title>Tic Tac Toe</title>
+
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="final-msg">
+  <div id="fireworks-container" style="position:absolute; width:100%; height:100%; top:0; left:0; z-index:0;"></div>
+  <button id="new">New Game</button>
+  <p id="win" style="position:relative; z-index:1;">Winner</p>
+</div>
+
+
   <div class="final-msg">
     <button id="new">New Game</button>
-    <p id="win">Winner</p>
+    <p id="win"></p>
   </div>
 <div class="bodycontent">
      <h2 class="main-heading">Tic Tac Toe</h2>
@@ -31,6 +38,7 @@
          <button class="reset">Reset!</button>
       </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.10.2/lottie.min.js"></script>
 <script src="my.js"></script>
 </body>
 </html>
